Version 1.2.0 -- 26 July 2007
-------------------------------------------------------------
6 August 2007
+ changed folder icon link back to '#'. Would not work on some systems
  (IE) 
+ clear image now checks max height and width display

1 August 2007
+ new installs of filecabinet were failing because Boost hadn't
  created the files directory yet 

26 July 2007
+ Added default classify directory
+ Increased popup size for file forms
+ Removed K (kilobyte) from error file.
+ Added missing video png to update
+ Oversized files were passing through without warning. Added error
  notifications.
+ Added human readable byte counts (kilo and mega)
+ Fixed multimedia table sql file
+ Added classify directory creation to update
+ Path for multimedia directory in update was wrong
+ Added boost directories for branch sites.

24 July 2007
+ Fixed image url text field in edit form. Added default http://
+ Made description textarea smaller.
+ Updated files: templates/image_edit.tpl

20 July 2007
+ Pinned image folders only show original thumbnails
+ Added minimum pop up window size
+ Added alt tag to no image
+ Fixed clear image link
+ Updated mp3player
+ Added missing branch directory to copy process in 1.1.0 update
+ Updated file: javascript/clear_image/head.js, conf/config.php

19 July 2007
+ Added missing "return true" to the install.php
+ Added upper limit on image dimension should a module have a high
  tolerance for its size.

18 July 2007
+ Subbed the current url for the # in the src for the folder onclick
  link. For some pain-in-my-ass reason, firefox loads the root
  regardless of the return false on the end.
+ javascript altered. Resampled image was using thumbnail image. I
  thought I had fixed that. Guess not. Also plugged in width and height
  just in case.
+ Updated files: javascript/pick_image/head.js

16 July 2007
+ Removed files: edit_embed.tpl

2 July 2007
+ Moved video types into video_types.php config file. Need to move